2004-06-22  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/microtek2.c: Fixed some (but not all) MIN related
	  compilation warnings (bug #300823).

2004-06-22  Rene Rebe <rene@rocklinux.org>
	* backend/avision.c, backend/avision.h, doc/sane-avision.man:
	  Fixed compilation warning (Bug #300399) and added a force-a3
	  option, needed for A3 scanner returning bogus scan area definitions

2004-06-21  Gerhard Jaeger <gerhard@gjaeger.de>
	* po/*.po: Updated according to upcomming changes in the plustek backend.

2004-06-20  Mattias Ellert <mattias.ellert@tsl.uu.se>
	* aclocal.m4, configure, sane/config.h.in, backend/Makefile.in, 
	  backend/agfafocus.c, backend/artec_eplus48u.c, backend/avision.c,
	  backend/coolscan.c, backend/fujitsu.c, backend/pie.c,
	  backend/plustek.c, backend/plustek_pp.c, backend/sp15c.c,
	  backend/tamarack.c, backend/u12.c
	* Fixing bug #300602 for the following backends: agfafocus,
	  artec_eplus48u, avision, coolscan, fujitsu, pie, plustek,
	  plustek_pp, sp15c, tamarack and u12
	* Migrating the avision backend to sanei_threads (bug #300631)

2004-06-19  Mattias Ellert <mattias.ellert@tsl.uu.se>
	* backend/gt68xx.c po/sane-backends.bg.po po/sane-backends.cs.po
	  po/sane-backends.da.po po/sane-backends.de.po
	  po/sane-backends.es.po po/sane-backends.fr.po
	  po/sane-backends.it.po po/sane-backends.nl.po
	  po/sane-backends.no.po po/sane-backends.pt.po
	  po/sane-backends.ru.po po/sane-backends.sv.po
	* Option names should not be tagged for localization
	* Fixing some typos
	* New localizable strings from the gt68xx backend (pofiles regenerated)
	* Swedish translation updated

2004-06-19  Mattias Ellert <mattias.ellert@tsl.uu.se>
	* sanei/sanei_scsi.c, tools/sane-find-scanner.c
	* SCSI scanners can now be selected by LUN on MacOS X
	* sane-find-scanner now finds SCSI scanners on MacOS X
	* making some sanei_scsi internal functions static

2004-05-30  Peter Fales <peter@fales-lorenz.net>